--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 	<body>
 
-		Nombre: Jesus Alberto Ramirez Otalvaro <br>
-		Codigo: 1422554
+		<b>Nombre:</b> Jesus Alberto Ramirez Otalvaro <br>
+		<b>Codigo:</b> 1422554
 
 	</body>
 
